<resources>

	<string name="app_name">Notable</string>
	<string name="menu_settings">Settings</string>
	<string name="hint2">Add a new reminder...</string>
	<string name="more_apps">More apps</string>
	<string name="general">General</string>
	<string name="create_shortcut">Create a shortcut in the notification bar</string>
	<string name="toggle_shortcut">Toggle shortcut</string>
	<string name="swiping_allow">Allow swiping</string>
	<string name="swiping_desc">Use the swiping gesture to mark a notification as done</string>
	<string name="donate">Donate</string>
	<string name="show_detail">Show detail screen</string>
	<string name="display_confirm">Display a detail screen when clicking on a notification.</string>

    <string name="extension_title">Notable</string>
    <string name="extension_description">Displays your current reminders.</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string> 
    <string name="edit">Edit</string> 
    <string name="done">Done</string> 
    <string name="onclick_text">Notification on click action</string> 
    <string name="onclick_description">What to do when a notification is clicked.</string> 
    <string name="choose">Choose an option</string> 
    <string name="add_long">Add a reminder</string> 
    <string name="dismiss_reminder">Dismiss reminder</string> 
    <string name="hide_expandable_options">Show expandable buttons</string> 
    <string name="hide_expadable_description">(Android 4.1+) Show actions when a notification is expanded</string> 
    <string name="low_prio">Low priority</string> 
    <string name="low_prio_info">(Andrid 4.1+) Display notifications in the end of the notification screen.</string> 
    <string name="DarkTheme">Dark Theme</string> 
    <string name="donate_only">Notable donators only</string>
</resources>